@@ -56,7 +56,8 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 045 ==> 193748 : Crash upon importing images from camera.
 046 ==> 206109 : digiKam marble map theme not selectable.
 047 ==> 207994 : Refresh meta data view on right side after exif import.
-048 ==> 
+048 ==> 207911 : Crash after trying to re-open Image Editor containing an unsaved RAW image.
+049 ==> 
 
 *********************************************************************************************************
 digiKam 1.0.0-beta4 - Release date: 2009-08-30
